# Robots

./: .gitignore  CMakeLists.txt  Robots-mygit.files  Robots-mygit.includes  Robots.files  Robots.includes
Aris&Robots_demo/Aris_Control_demo/: .project  Aris_Control_demo.cpp  CMakeLists.txt  Gait.cpp  Server.cpp  TrotGait.cpp  TrotGait.h  main.cpp
Aris&Robots_demo/Aris_Control_demo/gait/: acc.txt  fast_acc.txt  fast_back_const.txt  leg_up.txt  trot_three_acc_0.5_2_0.txt  trot_three_acc_0.7_3.8_0.18.txt  trot_three_const_0.5_2_0.txt  trot_three_const_0.6_2.5_0.txt  trot_three_const_2s.txt  trot_three_dec_0.55_2.3_0.18.txt  trot_three_dec_0.6_2.75_0.12.txt  trot_three_dec_2s.txt
CMakedemo/Aris_Control_demo/: #Gait.cpp#  .cproject  Aris_Control_demo.cpp  CMakeLists.txt  Client.cpp  Client.h  Gait.h  Server.cpp  Server.h  readme.txt
CMakedemo/Aris_Control_demo/resource/gait/: TL.txt  back_cons.txt  cons.txt  dec.txt  fast_back_acc.txt  fast_back_dec.txt  start.txt  trot_three_acc_0.6_2.5_0.txt  trot_three_acc_0.6_2.75_0.12.txt  trot_three_acc_2.5s_move.txt  trot_three_acc_opt_move.txt  trot_three_const_0.55_2.3_0.18.txt  trot_three_const_0.6_2.75_0.12.txt  trot_three_const_0.6_2.7_0.18.txt  trot_three_const_0.7_3.8_0.18.txt  trot_three_const_2.5s_move.txt  trot_three_const_opt_move.txt  trot_three_dec_0.5_2.2_0.12.txt  trot_three_dec_0.5_2_0.txt  trot_three_dec_0.6_2.5_0.txt  trot_three_dec_0.6_2.7_0.18.txt  trot_three_dec_2.5s_move.txt  trot_three_dec_opt_move.txt
CMakedemo/RobotIII_Control_by_PY/: CMakeLists.txt
CMakedemo/RobotIII_Control_by_PY/Client/: disable.cpp  forward.cpp  home1.cpp  mv_forward.cpp  toStart1.cpp  toStart2.cpp
CMakedemo/RobotIII_Control_by_PY/Server/: main.cpp  robot_interface.cpp  robot_interface.h  trajectory_generator.cpp  trajectory_generator.h
CMakedemo/RobotIII_demo/: CMakeLists.txt
CMakedemo/RobotIII_demo/Client/: client.cpp
CMakedemo/RobotIII_demo/Server/: main.cpp
CMakedemo/RobotIV_demo/: CMakeLists.txt
CMakedemo/RobotIV_demo/Client/: client.cpp  enable.cpp  home1.cpp  home2.cpp  walk.cpp  walk_cxb.cpp
CMakedemo/RobotIV_demo/Generating_Tool/: client.xml  generate_client.cpp
CMakedemo/RobotIV_demo/Server/: #trajectory_generator.cpp#  main.cpp  robot_interface.cpp  robot_interface.h  trajectory_generator.cpp  trajectory_generator.h
CMakedemo/RobotIV_demo/resource/: client.xml
Hexapod/: Hexapod_Robot.cpp  Hexapod_Robot.h  Hexapod_Robot_Plan.h  Plan_in_moving_marker.cpp  Plan_in_moving_marker.h  main.cpp
Hexapod/Resource/: HexapodII.xml  HexapodIII.xml
demo/demo_HexapodIII/: Hexapod_Robot_Plan.cpp  main.cpp
demo/demo_HexapodIV/: main.cpp
demo/demo_Plan/: main.cpp  plan.cpp  plan.h
demo/demo_RobotServerIII/: main.cpp
demo/demo_Test/: main.cpp
src/HexapodIII/: HexapodIII.cpp  HexapodIII.h  Hexapod_Robot.cpp  Hexapod_Robot.h
src/HexapodIII/Resource/: HexapodIII.xml
src/HexapodIII/re/: HexapodII.xml
src/HexapodIII/resource/: HexapodIII.xml
src/HexapodIV/: HexapodIV.cpp  HexapodIV.h
src/Robot_Base/: Robot_Base.cpp  Robot_Base.h  Robot_Gait.cpp  Robot_Gait.h
src/Robot_Client/: Robot_Client.cpp  Robot_Client.h  client.cpp
src/Robot_Server/: Robot_Server.cpp  Robot_Server.h
src/Robot_Type_I/: Robot_Type_I.cpp  Robot_Type_I.h
src/Robot_Type_I/resource/: HexapodIII.xml  Robot_II.xml  Robot_III.xml  Robot_VIII.xml  pIn_acc.txt  pIn_dec.txt
src/Robot_Type_I/resource/Robot_III/: Robot_III.xml
src/Robot_Type_I/resource/Robot_VIII/: Robot_VIII.xml  body.x_t  pIn_acc.txt  pIn_const.txt  pIn_dec.txt
src/Robot_Type_II/: Robot_Type_II.cpp  Robot_Type_II.h
test/: test_simple_walk.cpp
